# Copyright 2017 Cheng Zhao. All rights reserved.
# Use of this source code is governed by the license that can be found in the
# LICENSE file.

import("//v8binding/node.gni")

loadable_module("node_yue") {
  output_name = "gui"
  output_extension = "node"
  output_prefix_override = true  # do not add "lib" prefix

  sources = [
    "binding_gui.cc",
    "binding_signal.cc",
    "binding_signal.h",
  ]

  deps = [
    "//base",
    "//nativeui",
    "//v8binding",
  ]

  if (is_linux && is_component_build) {
    configs += [ "//build/config/gcc:rpath_for_built_shared_libraries" ]
  }
}
