# Copyright 2016 Cheng Zhao. All rights reserved.
# Use of this source code is governed by the license that can be found in the
# LICENSE file.

import("//testing/test.gni")

executable("yue") {
  sources = [
    "api_message_loop.cc",
    "api_message_loop.h",
    "builtin_loader.cc",
    "builtin_loader.h",
    "yue.cc",
  ]

  deps = [
    "//base",
    "//lua",
    "//nativeui",
  ]
}

test("yue_unittests") {
  sources = [
    "test/run_all_unittests.cc",
  ]

  deps = [
    ":yue",
    "//base/test:test_support",
    "//testing/gtest",
  ]
}
