# Copyright 2016 Cheng Zhao. All rights reserved.
# Use of this source code is governed by the license that can be found in the
# LICENSE file.

import("//testing/test.gni")

executable("yue") {
  sources = [
    "yue.cc",
  ]

  deps = [ ":libyue" ]
}

source_set("libyue") {
  sources = [
    "api_gui.cc",
    "api_gui.h",
    "api_message_loop.cc",
    "api_message_loop.h",
    "api_signal.cc",
    "api_signal.h",
    "builtin_loader.cc",
    "builtin_loader.h",
  ]

  deps = [
    "//base",
    "//lua",
    "//nativeui",
  ]
}

test("yue_unittests") {
  sources = [
    "api_signal_unittest.cc",
    "api_message_loop_unittest.cc",
    "test/run_all_unittests.cc",
  ]

  deps = [
    ":libyue",
    "//base/test:test_support",
    "//testing/gtest",
  ]
}
